# AIS1003_exam_project-v2

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
Include/: Asteroid.hpp  Astroid.hpp  Bullet.hpp  Collison helper.hpp  CollistionHandler.hpp  Colltion.h  Conector.hpp  GameInput.hpp  GameObject.hpp  Imgui.hpp  Imugi.hpp  ScoreSystem.hpp  Spaceship.hpp  projectile.hpp
src/: Asteroid.cpp  Astroid.cpp  Bullet.cpp  CMakeLists.txt  Collison helper.cpp  CollistionHandler.cpp  Imgui.cpp  Imugi.cpp  ScoreSystem.cpp  Spaceship.cpp  movement.cpp
test/: CMakeLists.txt  test_Asteroid.cpp  test_Bullet.cpp  test_spaceship.cpp
